log
ju., 21 de abr. de 2022 11:09:35: 
 tests:  1|8
total_score: 0/70
ecb73a0
ju., 21 de abr. de 2022 11:09:47: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
d8de181
ju., 21 de abr. de 2022 11:10:04: 
 tests:  1|8
total_score: 0/70
49440e4
ju., 21 de abr. de 2022 11:10:19: 
 tests:  1|8
total_score: 0/70
d5775ef
ju., 21 de abr. de 2022 11:11:13: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b7d03bb
ju., 21 de abr. de 2022 11:28:59: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:36: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than (key, nodo->pair->key < key)){
                                    ^~~~
treemap.c:77:36: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
030ff6a
ju., 21 de abr. de 2022 11:29:47: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:60: error: comparison of distinct pointer types lacks a cast [-Werror]
         if (tree->lower_than (key, (int *) nodo->pair->key < key)){
                                                            ^
treemap.c:77:36: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than (key, (int *) nodo->pair->key < key)){
                                    ^
treemap.c:77:36: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
87887b3
ju., 21 de abr. de 2022 11:30:06: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:36: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than (key, nodo->pair->key < key)){
                                    ^~~~
treemap.c:77:36: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
6ae32e0
ju., 21 de abr. de 2022 11:31:55: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:36: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than (key, nodo->pair->key < key) == 1){
                                    ^~~~
treemap.c:77:36: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
c82c4ff
ju., 21 de abr. de 2022 11:32:08: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:36: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than (key, nodo->pair->key < key) == 1){
                                    ^~~~
treemap.c:77:36: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
621ac39
ju., 21 de abr. de 2022 11:32:31: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
d48c3a0
ju., 21 de abr. de 2022 11:36:23: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
e86cded
ju., 21 de abr. de 2022 12:06:56: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:69:12: error: 'return' with a value, in function returning void [-Werror]
     return nodo;
            ^~~~
treemap.c:48:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c: At top level:
treemap.c:73:1: error: expected identifier or '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cdd51a4
ju., 21 de abr. de 2022 12:07:10: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:69:12: error: 'return' with a value, in function returning void [-Werror]
     return nodo;
            ^~~~
treemap.c:48:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5e01dc1
ju., 21 de abr. de 2022 12:07:28: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
4106ab9
ju., 21 de abr. de 2022 12:15:42: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  11|6
total_score: 15/70
09b50f9
ju., 21 de abr. de 2022 12:17:24: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:70:24: error: expected identifier before '->' token
         tree->current->->right->value = value;
                        ^~
Compilation failed
ef3965d
ju., 21 de abr. de 2022 12:17:34: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:70:29: error: 'TreeNode {aka struct TreeNode}' has no member named 'value'
         tree->current->right->value = value;
                             ^~
Compilation failed
6e7b421
ju., 21 de abr. de 2022 12:17:52: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
a661410
ju., 21 de abr. de 2022 12:21:08: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
815ac14
ju., 21 de abr. de 2022 12:23:42: 
 treemap.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:5: error: 'newNode' undeclared (first use in this function)
     newNode = createTreeNode(key,value);
     ^~~~~~~
treemap.c:50:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:53:5: error: 'datos' undeclared (first use in this function)
     datos->key = key;
     ^~~~~
Compilation failed
63f0f61
ju., 21 de abr. de 2022 12:24:32: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
35ef0d5
ju., 21 de abr. de 2022 12:25:20: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
test.c: In function 'insertTreeMap':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6c70dee
